<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LashGo</string>

    <string name="facebook_app_id">417722991695914</string>
    <string name="vkontakte_app_id">4201819</string>
    <string name="vkontakte_secret_key">bRUrRkgalTiHE8tliClK</string>
    <string name="twitter_consumerKey">JjHQisFOu784Ag7HBAcJg</string>
    <string name="twitter_consumerSecret">pIkZnc7NJ8CW0WG5sCFLgPD5BOrak2Gtca3hmpy5dg</string>
    <string name="twitter_callback_url">check://twitter</string>


    <!-- login screen strings -->
    <string name="login">ВХОД</string>
    <string name="register">РЕГИСТРАЦИЯ</string>
    <string name="auth_vk">VK</string>
    <string name="auth_facebook">F</string>
    <string name="auth_twitter">T</string>
    <string name="hint_login">Email</string>
    <string name="hint_password">Пароль</string>
    <string name="error_no_internet">Нет интернет соединения</string>
    <string name="hint_email">Email</string>
    <string name="error_empty_field">Поле не может быть пустым</string>
    <string name="server_is_unavailable">Сервер недоступен</string>
    <string name="auth_success">Пользователь авторизован</string>
    <string name="password_recover">ВСПОМНИТЬ</string>
    <string name="remember_password">напомнить пароль</string>
    <string name="wrong_response">Неверный ответ</string>

    <string-array name="menus_array">
        <item>Задания</item>
        <item>Новости</item>
        <item>Подписки</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="check_list">Задания</string>
    <string name="news_list">Новости</string>
    <string name="subscribes_list">Подписки</string>
    <string name="start">Начать</string>
    <string name="enter">Войти</string>
    <string name="social_login">Войти через соцсети</string>
    <string name="password_was_reset">Новый пароль отправлен вам на email</string>
    <string name="email_for_recovery">Адрес для восстановления</string>
    <string name="ready">Готово</string>
    <string name="active_checks">Активные</string>
    <string name="finished_checks">Завершенные</string>
    <string name="regular">Roboto-Regular</string>
    <string name="medium">Roboto-Medium</string>
    <string name="condensed_regular">RobotoCondensed-Regular</string>
    <string name="login_or_register">Войдите или зарегистрируйтесь</string>
    <string name="tasks">Задания</string>
    <string name="news">Новости</string>
    <string name="subscribes">Подписки</string>
    <string name="vote_checks">Идёт голосование</string>
    <string name="task">Чек</string>
    <string name="make_photo">Выполнить задание с помощью...</string>
    <string name="empty_image_was_chosen">Выбрана пустая фотография</string>
    <string name="congratulations">Поздравляем!</string>
    <string name="now_you_are_with_us">Теперь вы с нами.</string>
    <string name="subscibes_count">подписок</string>
    <string name="subscibers_count">подписчиков</string>
    <string name="fill_profile">ЗАПОЛНИТЬ ПРОФИЛЬ</string>
    <string name="continue_register">ПРОДОЛЖИТЬ</string>
    <string name="error_empty_email">Введите email</string>
    <string name="error_empty_password">Введите пароль</string>
    <string name="loading">Загрузка...</string>
    <string name="error_send_photo">Произошла ошибка. Сделайте фото ещё раз.</string>
    <string name="choose_photo">Выберите одну\nиз четырёх фото</string>
    <string name="error_empty_check">Пустой чек</string>
    <string name="now_this_button">Теперь эту кнопочку</string>
    <string name="go_to_next_partition">Перейти к\nследующей партии</string>
    <string name="vote_is_going">Идёт\nголосование</string>
    <string name="checks_count">%d чеков</string>
    <string name="comments_count">%d комментариев</string>
    <string name="likes_count">%d лайков</string>
    <string name="cheers">Ура!</string>
    <string name="photo_sent">Ваше фото успешно отправлено.\n\nЖдите результат голосования</string>
    <string name="i_want">Я хочу:</string>
    <string name="take_picture">СДЕЛАТЬ ФОТО</string>
    <string name="choose_from_gallery">ВЫБРАТЬ ФОТО ИЗ ГАЛЕРЕИ</string>
    <string name="hint_fio">Фамилия Имя Отчество</string>
    <string name="hint_location">Город</string>
    <string name="hint_about">О себе</string>
    <string name="hint_change_password">Сменить пароль</string>
    <string name="profile_saved">Профиль успешно сохранён</string>
    <string name="edit">Редактировать</string>
    <string name="skip">ПРОПУСТИТЬ</string>
    <string name="splash_enter">ВХОД</string>
    <string name="login_enter">Вход</string>
    <string name="comments">Комментарии</string>
    <string name="hint_comment">Оставьте комментарий</string>
    <string name="error_empty_comment">Комментарий не может быть пустым</string>
    <string name="recover_email">Адрес для восстановления пароля</string>
    <string name="confirm">Принять</string>
    <string name="search">Поиск</string>
    <string name="refresh">Обновить</string>
    <string name="settings">Настройки</string>
    <string name="help">Помощь</string>
    <string name="exit">Выход</string>
    <string name="notifications">Уведомления</string>
    <string name="avatar_saved">Аватар сохранён</string>
    <string name="hint_user_name">Имя пользователя</string>
    <string name="no_news">У вас пока нет новостей</string>
    <string name="all_photos_seen">Вы просмотрели все фото чека</string>
    <string name="user_not_found">Пользователь с таким логином не существует</string>
    <string name="user_already_exist">Пользователь с таким логином уже существует</string>
    <string name="send_invalid_data">Переданы некорректные данные</string>
    <string name="photo_alredy_exist">Вы уже отправили фото для данного чека</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="email_already_exist">Пользователь с таким email уже существует</string>
    <string name="notification_title">Начался новый чек</string>
    <string name="ok">OK</string>
    <string name="photo">Фото</string>
    <string name="subscribers_list">Подписчики</string>
    <string name="no_result">Список пуст</string>
    <string name="signed_up">подписан на вас</string>
    <string name="commented">прокомментировал фото</string>
    <string name="won">победили в чеке</string>
    <string name="you">Вы</string>
    <string name="activity">Активность</string>
    <string name="peoples">ЛЮДЕЙ</string>
    <string name="checks">ЧЕКОВ</string>
    <string name="users">Пользователи</string>
    <string name="search_with_points">Поиск...</string>
    <string name="vote_for">проголосовал за фото</string>
    <string name="participate_check">принял участие в чеке</string>
    <string name="complain_sent">Ваша жалоба отправлена</string>
    <string-array name="make_photo_items">
        <item>Камера</item>
        <item>Галерея</item>
    </string-array>

    <plurals name="number_of_checks">
        <item quantity="one">1 чек</item>
        <item quantity="few">%d чека</item>
        <item quantity="other">%d чеков</item>
    </plurals>

    <plurals name="number_of_subscribes">
        <item quantity="one">подписка</item>
        <item quantity="few">подписки</item>
        <item quantity="other">подписок</item>
    </plurals>

    <plurals name="number_of_subscribeкs">
        <item quantity="one">подписчик</item>
        <item quantity="few">подписчика</item>
        <item quantity="other">подписчиков</item>
    </plurals>

    <plurals name="number_of_comments">
        <item quantity="one">1 комментарий</item>
        <item quantity="few">%d комментария</item>
        <item quantity="other">%d комментариев</item>
    </plurals>
</resources>