<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res/com.lashgo.android"
        android:layout_width="match_parent" android:layout_height="wrap_content">
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/action_bar_height"
            >
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent" android:layout_height="match_parent">
            <FrameLayout android:layout_width="match_parent" android:layout_height="184dp"
                         android:background="@drawable/bg_edit_profile"
                    >
                <ImageView
                        android:id="@+id/user_avatar"
                        android:layout_width="64dp" android:layout_height="64dp"
                        android:layout_gravity="top|left"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/ava"
                        />
            </FrameLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="0dp"
                          android:layout_weight="1"
                          android:orientation="vertical"
                          android:background="@color/bg_after_reg_bottom"
                          android:paddingLeft="16dp"
                          android:paddingRight="16dp"
                          android:paddingBottom="16dp"
                    >
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:orientation="horizontal"
                              android:gravity="center_vertical"
                              android:paddingTop="35dp"
                              android:layout_alignParentLeft="true"
                              android:layout_alignParentTop="true"
                        >
                    <ImageView android:layout_width="24dp" android:layout_height="24dp"
                               android:src="@drawable/nickname"
                            />
                    <com.lashgo.android.ui.views.RobotoEditText
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:id="@+id/edit_login"
                            android:layout_marginLeft="32dp"
                            android:hint="@string/hint_user_name"
                            app:fontName="@string/regular"
                            />
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:orientation="horizontal"
                              android:gravity="center_vertical"
                              android:paddingTop="10dp"
                              android:layout_alignParentLeft="true"
                              android:layout_alignParentTop="true"
                        >
                    <ImageView android:layout_width="24dp" android:layout_height="24dp"
                               android:src="@drawable/profile_person"
                            />
                    <com.lashgo.android.ui.views.RobotoEditText
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:id="@+id/edit_fio"
                            android:layout_marginLeft="32dp"
                            android:hint="@string/hint_fio"
                            app:fontName="@string/regular"
                            />
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:orientation="horizontal"
                              android:gravity="center_vertical"
                              android:paddingTop="10dp"
                              android:layout_alignParentLeft="true"
                              android:layout_alignParentTop="true"
                        >
                    <ImageView android:layout_width="24dp" android:layout_height="24dp"
                               android:src="@drawable/profile_location"
                            />
                    <com.lashgo.android.ui.views.RobotoEditText
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:id="@+id/edit_location"
                            android:layout_marginLeft="32dp"
                            android:hint="@string/hint_location"
                            app:fontName="@string/regular"
                            />
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:orientation="horizontal"
                              android:gravity="center_vertical"
                              android:paddingTop="10dp"
                              android:layout_alignParentLeft="true"
                              android:layout_alignParentTop="true"
                        >
                    <ImageView android:layout_width="24dp" android:layout_height="24dp"
                               android:src="@drawable/profile_mail"
                            />
                    <com.lashgo.android.ui.views.RobotoEditText
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:id="@+id/edit_email"
                            android:layout_marginLeft="32dp"
                            android:hint="@string/hint_email"
                            app:fontName="@string/regular"
                            android:inputType="textEmailAddress"
                            />
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:orientation="horizontal"
                              android:gravity="center_vertical"
                              android:paddingTop="10dp"
                              android:layout_alignParentLeft="true"
                              android:layout_alignParentTop="true"
                        >
                    <ImageView android:layout_width="24dp" android:layout_height="24dp"
                               android:src="@drawable/profile_about"
                            />
                    <com.lashgo.android.ui.views.RobotoEditText
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:id="@+id/edit_about"
                            android:layout_marginLeft="32dp"
                            android:hint="@string/hint_about"
                            app:fontName="@string/regular"
                            />
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:orientation="horizontal"
                              android:gravity="center_vertical"
                              android:paddingTop="10dp"
                              android:layout_alignParentLeft="true"
                              android:layout_alignParentTop="true"
                        >
                    <ImageView android:layout_width="24dp" android:layout_height="24dp"
                               android:src="@drawable/profile_lock"
                            />
                    <com.lashgo.android.ui.views.RobotoEditText
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:id="@+id/edit_password"
                            android:inputType="textPassword"
                            android:layout_marginLeft="32dp"
                            android:hint="@string/hint_change_password"
                            app:fontName="@string/regular"
                            />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <com.lashgo.android.ui.views.RobotoButton
                android:id="@+id/make_photo"
                android:layout_width="62dp" android:layout_height="62dp"
                android:layout_marginRight="13dp"
                android:layout_marginTop="153dp"
                android:layout_gravity="top|right"
                android:background="@drawable/btn_pink_camera"
                />
        <include layout="@layout/dialog_progress"/>
    </FrameLayout>
</ScrollView>